test issues fixed, all passing now