@@ -39,273 +39,266 @@ import org.springframework.stereotype.Service;
 @Service("orderService")
 public class OrderServiceImpl implements OrderService {
 
-  @Autowired private OrderRepository orderRepository;
+    @Autowired
+    private OrderRepository orderRepository;
 
-  @Autowired private OrderItemRepository orderItemRepository;
+    @Autowired
+    private OrderItemRepository orderItemRepository;
 
-  @Autowired private UserService userService;
+    @Autowired
+    private UserService userService;
 
-  @Autowired private CartService cartService;
+    @Autowired
+    private CartService cartService;
 
-  @Autowired private PaymentService paymentService;
+    @Autowired
+    private PaymentService paymentService;
 
-  @Autowired private ProductService productService;
+    @Autowired
+    private ProductService productService;
 
-  @Autowired private ModelMapper modelMapper;
+    @Autowired
+    private ModelMapper modelMapper;
 
-  public static Logger log = LoggerFactory.getLogger(OrderServiceImpl.class);
+    public static Logger log = LoggerFactory.getLogger(OrderServiceImpl.class);
 
-  @Override
-  @Transactional
-  public OrderDTO placeOrder(Long userId, PaymentDTO paymentDTO) {
+    @Override
+    @Transactional
+    public OrderDTO placeOrder(Long userId, PaymentDTO paymentDTO) {
 
-    Optional<User> userOpt = userService.findUserById(userId);
+        Optional<User> userOpt = userService.findUserById(userId);
 
-    if (userOpt.isEmpty()) {
-      throw new ResourceNotFoundException("User", "userId", userId);
+        if (userOpt.isEmpty()) {
+            throw new ResourceNotFoundException("User", "userId", userId);
+        }
+
+        User user = userOpt.get();
+        Optional<Cart> cart_Optional = cartService.findCartByEmail(user.getEmail());
+
+        if (cart_Optional.isEmpty()) {
+            throw new ResourceNotFoundException("Cart", "email", user.getEmail());
+        }
+
+        Cart cart = cart_Optional.get();
+
+        List<CartItem> cartItems = cart.getCartItems();
+
+        if (cartItems.isEmpty()) {
+            throw new APIException("Cannot place order with empty cart.");
+        }
+
+        for (CartItem item : cartItems) {
+            Product product = productService.getProductById(item.getProduct().getProductId());
+            if (product.getQuantity() < item.getQuantity()) {
+                throw new APIException(
+                        "Insufficient stock for product: "
+                                + product.getProductName()
+                                + ". Available: "
+                                + product.getQuantity()
+                                + ", Required: "
+                                + item.getQuantity());
+            }
+        }
+
+        Order order = new Order();
+
+        order.setUser(user);
+        order.setOrderDate(LocalDate.now());
+
+        order.setTotalAmount(cart.getTotalPrice());
+        order.setOrderStatus(OrderStatus.valueOf("PENDING"));
+
+        Payment payment = paymentService.processPayment(paymentDTO);
+        order.setPayment(payment);
+        Order savedOrder = orderRepository.save(order);
+
+        List<OrderItem> orderItems = new ArrayList<>();
+
+        for (CartItem cartItem : cartItems) {
+            OrderItem orderItem = new OrderItem();
+
+            orderItem.setProduct(cartItem.getProduct());
+            orderItem.setQuantity(cartItem.getQuantity());
+            orderItem.setDiscount(cartItem.getDiscount());
+            orderItem.setOrderedProductPrice(cartItem.getProductPrice());
+            orderItem.setOrder(savedOrder);
+
+            orderItems.add(orderItem);
+
+            // delete from Cart afterwards
+            int quantity = cartItem.getQuantity();
+            Product product = cartItem.getProduct();
+
+            productService.decreaseProductQuantity(product.getProductId(), quantity);
+        }
+
+        orderItems = orderItemRepository.saveAll(orderItems);
+        savedOrder.setOrderItems(orderItems);
+
+        // Clear cart after order is placed
+        cart.clear();
+
+        OrderDTO orderDTO = modelMapper.map(savedOrder, OrderDTO.class);
+        orderDTO.setEmail(user.getEmail());
+
+        orderDTO.getOrderItems().stream().map(item -> modelMapper.map(item, OrderItemDTO.class));
+
+        return orderDTO;
     }
 
-    User user = userOpt.get();
-    Optional<Cart> cart_Optional = cartService.findCartByEmail(user.getEmail());
+    @Override
+    public OrderDTO getOrder(String emailId, Long orderId) {
+        Order order = orderRepository.findOrderByEmailAndOrderId(emailId, orderId);
+        if (order == null) {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
 
-    if (cart_Optional.isEmpty()) {
-      throw new ResourceNotFoundException("Cart", "email", user.getEmail());
+        OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
+        orderDTO.setEmail(order.getUser().getEmail());
+
+        return orderDTO;
     }
 
-    Cart cart = cart_Optional.get();
+    @Override
+    public List<OrderDTO> getOrdersByUser(String emailId) {
+        List<Order> orders = orderRepository.findAllByUserEmail(emailId);
+        List<OrderDTO> orderDTOs = orders.stream()
+                .map(
+                        order -> {
+                            OrderDTO dto = modelMapper.map(order, OrderDTO.class);
+                            dto.setEmail(order.getUser().getEmail());
+                            return dto;
+                        })
+                .toList();
+        if (orderDTOs.size() == 0) {
+            throw new APIException("No orders found for user with emailId: " + emailId);
+        }
 
-    List<CartItem> cartItems = cart.getCartItems();
-
-    if (cartItems.isEmpty()) {
-      throw new APIException("Cannot place order with empty cart.");
+        return orderDTOs;
     }
 
-    for (CartItem item : cartItems) {
-      Product product = productService.getProductById(item.getProduct().getProductId());
-      if (product.getQuantity() < item.getQuantity()) {
-        throw new APIException(
-            "Insufficient stock for product: "
-                + product.getProductName()
-                + ". Available: "
-                + product.getQuantity()
-                + ", Required: "
-                + item.getQuantity());
-      }
+    @Override
+    public OrderResponse getAllOrders(
+            Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+        Sort sort = sortOrder.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
+
+        Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sort);
+        Page<Order> pageOrders = orderRepository.findAll(pageDetails);
+
+        List<Order> orders = pageOrders.getContent();
+
+        List<OrderDTO> orderDTOs = orders.stream()
+                .map(
+                        order -> {
+                            OrderDTO dto = modelMapper.map(order, OrderDTO.class);
+                            dto.setEmail(order.getUser().getEmail());
+                            return dto;
+                        })
+                .toList();
+
+        if (orderDTOs.size() == 0) {
+            throw new APIException("No orders found");
+        }
+
+        OrderResponse orderResponse = new OrderResponse();
+
+        orderResponse.setContent(orderDTOs);
+        orderResponse.setPageNumber(pageOrders.getNumber());
+        orderResponse.setPageSize(pageOrders.getSize());
+        orderResponse.setTotalPages(pageOrders.getTotalPages());
+        orderResponse.setTotalElements(pageOrders.getTotalElements());
+        orderResponse.setLastPage(pageOrders.isLast());
+
+        return orderResponse;
     }
 
-    Order order = new Order();
+    @Override
+    public OrderDTO updateOrder(String emailId, Long orderId, OrderStatus orderStatus) {
+        Order order = orderRepository.findOrderByEmailAndOrderId(emailId, orderId);
+        if (order == null) {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
 
-    order.setUser(user);
-    order.setOrderDate(LocalDate.now());
+        order.setOrderStatus(orderStatus);
 
-    order.setTotalAmount(cart.getTotalPrice());
-    order.setOrderStatus(OrderStatus.valueOf("PENDING"));
+        OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
 
-    Payment payment = paymentService.processPayment(paymentDTO);
-    order.setPayment(payment);
-    Order savedOrder = orderRepository.save(order);
-
-    List<OrderItem> orderItems = new ArrayList<>();
-
-    for (CartItem cartItem : cartItems) {
-      OrderItem orderItem = new OrderItem();
-
-      orderItem.setProduct(cartItem.getProduct());
-      orderItem.setQuantity(cartItem.getQuantity());
-      orderItem.setDiscount(cartItem.getDiscount());
-      orderItem.setOrderedProductPrice(cartItem.getProductPrice());
-      orderItem.setOrder(savedOrder);
-
-      orderItems.add(orderItem);
-
-      // delete from Cart afterwards
-      int quantity = cartItem.getQuantity();
-      Product product = cartItem.getProduct();
-
-      productService.decreaseProductQuantity(product.getProductId(), quantity);
+        return orderDTO;
     }
 
-    orderItems = orderItemRepository.saveAll(orderItems);
-    savedOrder.setOrderItems(orderItems);
-
-    // Clear cart after order is placed
-    cart.clear();
-
-    OrderDTO orderDTO = modelMapper.map(savedOrder, OrderDTO.class);
-    orderDTO.setEmail(user.getEmail());
-
-    orderDTO.getOrderItems().stream().map(item -> modelMapper.map(item, OrderItemDTO.class));
-
-    return orderDTO;
-  }
-
-  @Override
-  public OrderDTO getOrder(String emailId, Long orderId) {
-    Order order = orderRepository.findOrderByEmailAndOrderId(emailId, orderId);
-    if (order == null) {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
+    @Override
+    public OrderDTO updateOrderStatus(Long orderId, OrderStatus orderStatus) {
+        Optional<Order> orderOpt = orderRepository.findById(orderId);
+        if (orderOpt.isPresent()) {
+            Order order = orderOpt.get();
+            order.setOrderStatus(orderStatus);
+            orderRepository.save(order);
+            OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
+            return orderDTO;
+        } else {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
     }
 
-    OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
-    orderDTO.setEmail(order.getUser().getEmail());
+    @Override
+    @Transactional
+    public String cancelOrder(Long orderId, Long userId) {
+        Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
 
-    return orderDTO;
-  }
+        if (orderOpt.isEmpty()) {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
 
-  @Override
-  public List<OrderDTO> getOrdersByUser(String emailId) {
-    List<Order> orders = orderRepository.findAllByUserEmail(emailId);
-    List<OrderDTO> orderDTOs =
-        orders.stream()
-            .map(
-                order -> {
-                  OrderDTO dto = modelMapper.map(order, OrderDTO.class);
-                  dto.setEmail(order.getUser().getEmail());
-                  return dto;
-                })
-            .toList();
-    if (orderDTOs.size() == 0) {
-      throw new APIException("No orders found for user with emailId: " + emailId);
+        Order order = orderOpt.get();
+
+        if (!order.getUser().getUserId().equals(userId)) {
+            throw new APIException("You don't have permission to cancel this order");
+        }
+
+        if (order.getOrderStatus() == OrderStatus.SHIPPED
+                || order.getOrderStatus() == OrderStatus.DELIVERED) {
+            throw new APIException("Cannot cancel order that has been shipped or delivered");
+        }
+
+        for (OrderItem item : order.getOrderItems()) {
+            Product product = item.getProduct();
+            product.setQuantity(product.getQuantity() + item.getQuantity());
+            productService.save(product);
+        }
+
+        order.setOrderStatus(OrderStatus.CANCELLED);
+        orderRepository.save(order);
+
+        return "Order cancelled successfully";
     }
 
-    return orderDTOs;
-  }
+    @Override
+    public List<OrderItemDTO> getOrderItems(Long orderId) {
+        Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
 
-  @Override
-  public OrderResponse getAllOrders(
-      Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
-    Sort sort =
-        sortOrder.equalsIgnoreCase("asc")
-            ? Sort.by(sortBy).ascending()
-            : Sort.by(sortBy).descending();
+        if (orderOpt.isEmpty()) {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
 
-    Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sort);
-    Page<Order> pageOrders = orderRepository.findAll(pageDetails);
+        Order order = orderOpt.get();
 
-    List<Order> orders = pageOrders.getContent();
-
-    List<OrderDTO> orderDTOs =
-        orders.stream()
-            .map(
-                order -> {
-                  OrderDTO dto = modelMapper.map(order, OrderDTO.class);
-                  dto.setEmail(order.getUser().getEmail());
-                  return dto;
-                })
-            .toList();
-
-    if (orderDTOs.size() == 0) {
-      throw new APIException("No orders found");
+        return order.getOrderItems().stream()
+                .map(item -> modelMapper.map(item, OrderItemDTO.class))
+                .collect(Collectors.toList());
     }
 
-    OrderResponse orderResponse = new OrderResponse();
+    @Override
+    public boolean isOrderOwner(Long orderId, Long userId) {
+        Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
 
-    orderResponse.setContent(orderDTOs);
-    orderResponse.setPageNumber(pageOrders.getNumber());
-    orderResponse.setPageSize(pageOrders.getSize());
-    orderResponse.setTotalPages(pageOrders.getTotalPages());
-    orderResponse.setTotalElements(pageOrders.getTotalElements());
-    orderResponse.setLastPage(pageOrders.isLast());
+        if (orderOpt.isEmpty()) {
+            throw new ResourceNotFoundException("Order", "orderId", orderId);
+        }
 
-    return orderResponse;
-  }
+        Order order = orderOpt.get();
 
-  @Override
-  public OrderDTO updateOrder(String emailId, Long orderId, OrderStatus orderStatus) {
-    Order order = orderRepository.findOrderByEmailAndOrderId(emailId, orderId);
-    if (order == null) {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
+        return order.getUser().getUserId().equals(userId);
     }
-
-    order.setOrderStatus(orderStatus);
-
-    OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
-
-    return orderDTO;
-  }
-
-  @Override
-  public OrderDTO updateOrderStatus(Long orderId, OrderStatus orderStatus) {
-    Optional<Order> orderOpt = orderRepository.findById(orderId);
-    if (orderOpt.isPresent()) {
-      Order order = orderOpt.get();
-      order.setOrderStatus(orderStatus);
-      orderRepository.save(order);
-      OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
-      return orderDTO;
-    } else {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
-    }
-  }
-
-  @Override
-  @Retryable(
-      retryFor = ObjectOptimisticLockingFailureException.class,
-      maxAttempts = 3,
-      backoff = @Backoff(delay = 1000, multiplier = 2))
-  @Transactional
-  public String cancelOrder(Long orderId, Long userId) {
-    Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
-
-    if (orderOpt.isEmpty()) {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
-    }
-
-    Order order = orderOpt.get();
-
-    if (!order.getUser().getUserId().equals(userId)) {
-      throw new APIException("You don't have permission to cancel this order");
-    }
-
-    if (order.getOrderStatus() == OrderStatus.SHIPPED
-        || order.getOrderStatus() == OrderStatus.DELIVERED) {
-      throw new APIException("Cannot cancel order that has been shipped or delivered");
-    }
-
-    for (OrderItem item : order.getOrderItems()) {
-      Product product = item.getProduct();
-      product.setQuantity(product.getQuantity() + item.getQuantity());
-      productService.save(product);
-    }
-
-    order.setOrderStatus(OrderStatus.CANCELLED);
-    orderRepository.save(order);
-
-    return "Order cancelled successfully";
-  }
-
-  @Recover
-  public String recoverCancelOrder(
-      ObjectOptimisticLockingFailureException e, Long orderId, Long userId) {
-    log.error("Failed to cancel order {} after retries", orderId, e);
-    throw new APIException("Unable to cancel order. Please try again.");
-  }
-
-  @Override
-  public List<OrderItemDTO> getOrderItems(Long orderId) {
-    Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
-
-    if (orderOpt.isEmpty()) {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
-    }
-
-    Order order = orderOpt.get();
-
-    return order.getOrderItems().stream()
-        .map(item -> modelMapper.map(item, OrderItemDTO.class))
-        .collect(Collectors.toList());
-  }
-
-  @Override
-  public boolean isOrderOwner(Long orderId, Long userId) {
-    Optional<Order> orderOpt = orderRepository.findByOrderId(orderId);
-
-    if (orderOpt.isEmpty()) {
-      throw new ResourceNotFoundException("Order", "orderId", orderId);
-    }
-
-    Order order = orderOpt.get();
-
-    return order.getUser().getUserId().equals(userId);
-  }
 }
