@@ -15,6 +15,7 @@ import com.grabbler.payloads.payment.*;
 import com.grabbler.repositories.*;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
@@ -28,245 +29,267 @@ import org.modelmapper.ModelMapper;
 @ExtendWith(MockitoExtension.class)
 public class OrderServiceTest {
 
-  @Mock private OrderRepository orderRepository;
+    @Mock
+    private OrderRepository orderRepository;
 
-  @Mock private OrderItemRepository orderItemRepository;
+    @Mock
+    private OrderItemRepository orderItemRepository;
 
-  @Mock private CartService cartService;
+    @Mock
+    private CartService cartService;
 
-  @Mock private PaymentService paymentService;
+    @Mock
+    private PaymentService paymentService;
 
-  @Mock private ProductService productService;
+    @Mock
+    private ProductService productService;
 
-  @Mock private UserService userService;
+    @Mock
+    private UserService userService;
 
-  @Mock private ModelMapper modelMapper;
+    @Mock
+    private ModelMapper modelMapper;
 
-  @InjectMocks private OrderServiceImpl orderService;
+    @InjectMocks
+    private OrderServiceImpl orderService;
 
-  private User user;
-  private Cart cart;
-  private Product product;
-  private PaymentDTO paymentDTO;
-  private Payment payment;
-  private Order order;
-  private CartItem cartItem;
-  private OrderDTO orderDTO;
+    private User user;
+    private Cart cart;
+    private Product product;
+    private PaymentDTO paymentDTO;
+    private Payment payment;
+    private Order order;
+    private CartItem cartItem;
+    private OrderDTO orderDTO;
 
-  @BeforeEach
-  public void setUp() {
-    // Set up user
-    user = new User();
-    user.setUserId(1L);
-    user.setEmail("test@test.com");
+    @BeforeEach
+    public void setUp() {
+        // Initialize Product FIRST with all required fields
+        product = new Product();
+        product.setProductId(1L);
+        product.setProductName("Test Product");
+        product.setQuantity(10); // CRITICAL!
+        product.setPrice(100.0);
+        product.setDiscount(10.0);
+        product.setSpecialPrice(90.0);
 
-    // Set up product
-    product = new Product();
-    product.setProductId(1L);
-    product.setProductName("Test Product");
-    product.setPrice(10.0);
-    product.setQuantity(10);
-    product.setSpecialPrice(10.0);
-    product.setDiscount(0.0);
+        // Initialize CartItem and SET THE PRODUCT
+        cartItem = new CartItem();
+        cartItem.setCartItemId(1L);
+        cartItem.setProduct(product); // CRITICAL! This links product to cartItem
+        cartItem.setQuantity(2);
+        cartItem.setProductPrice(90.0);
+        cartItem.setDiscount(10.0);
 
-    // Set up cart item
-    cartItem = new CartItem();
-    cartItem.setCartItemId(1L);
-    cartItem.setProduct(product);
-    cartItem.setQuantity(2);
-    cartItem.setProductPrice(10.0);
-    cartItem.setDiscount(0.0);
+        // Initialize User
+        user = new User();
+        user.setUserId(1L);
+        user.setEmail("test@example.com");
+        user.setFirstName("Test");
+        user.setLastName("User");
 
-    // Set up cart - IMPORTANT: create mutable list
-    cart = new Cart();
-    cart.setCartId(1L);
-    cart.setUser(user);
-    cart.setTotalPrice(20.0);
-    cart.setCartItems(new ArrayList<>(List.of(cartItem)));
+        // Initialize Cart with the cartItem
+        cart = new Cart();
+        cart.setCartId(1L);
+        cart.setUser(user);
+        cart.setCartItems(new ArrayList<>(Arrays.asList(cartItem))); // Add cartItem to list
+        cart.setTotalPrice(180.0);
 
-    // Set up payment DTO
-    paymentDTO = new PaymentDTO();
-    paymentDTO.setPaymentToken("test_token");
-    paymentDTO.setPaymentMethod(PaymentMethod.CREDIT_CARD);
-    paymentDTO.setPaymentStatus(PaymentStatus.PENDING);
+        // Initialize Payment
+        payment = new Payment();
+        payment.setTransactionId(1L);
+        payment.setPaymentMethod(PaymentMethod.CREDIT_CARD);
+        payment.setPaymentStatus(PaymentStatus.PENDING);
+        payment.setPaymentToken("token123");
 
-    // Set up payment
-    payment = new Payment();
-    payment.setTransactionId(1L);
-    payment.setPaymentMethod(PaymentMethod.CREDIT_CARD);
-    payment.setPaymentToken("test_token");
-    payment.setPaymentStatus(PaymentStatus.COMPLETED);
+        // Initialize Order
+        order = new Order();
+        order.setOrderId(1L);
+        order.setUser(user);
+        order.setTotalAmount(180.0);
+        order.setOrderStatus(OrderStatus.PENDING);
+        order.setPayment(payment);
+        order.setOrderDate(LocalDate.now());
 
-    // Set up order
-    order = new Order();
-    order.setOrderId(1L);
-    order.setUser(user);
-    order.setOrderDate(LocalDate.now());
-    order.setTotalAmount(20.0);
-    order.setOrderStatus(OrderStatus.PENDING);
-    order.setPayment(payment);
-    order.setOrderItems(new ArrayList<>());
+        // Initialize PaymentDTO
+        paymentDTO = new PaymentDTO();
+        paymentDTO.setPaymentMethod(PaymentMethod.CREDIT_CARD);
+        paymentDTO.setPaymentToken("token123");
 
-    // Set up order DTO
-    orderDTO = new OrderDTO();
-    orderDTO.setOrderId(1L);
-    orderDTO.setEmail(user.getEmail());
-    orderDTO.setOrderItems(new ArrayList<>());
-    orderDTO.setTotalAmount(20.0);
-  }
+        // Initialize OrderDTO
+        orderDTO = new OrderDTO();
+        orderDTO.setOrderId(1L);
+        orderDTO.setEmail(user.getEmail());
+        orderDTO.setTotalAmount(180.0);
+        orderDTO.setOrderStatus(OrderStatus.PENDING.toString());
+    }
 
-  @Test
-  public void testPlaceOrder_Success() {
-    // Arrange
-    when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
-    when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(cart));
-    when(paymentService.processPayment(any(PaymentDTO.class))).thenReturn(payment);
-    when(orderRepository.save(any(Order.class))).thenReturn(order);
+    @Test
+    public void testPlaceOrder_Success() {
+        // Arrange
+        when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
+        when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(cart));
+        when(productService.getProductById(product.getProductId())).thenReturn(product);
+        when(paymentService.processPayment(any(PaymentDTO.class))).thenReturn(payment);
+        when(orderRepository.save(any(Order.class))).thenReturn(order);
+        when(orderItemRepository.saveAll(any(List.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+        when(productService.decreaseProductQuantity(
+                eq(product.getProductId()), eq(cartItem.getQuantity())))
+                .thenReturn(true);
+        when(modelMapper.map(any(Order.class), eq(OrderDTO.class))).thenReturn(orderDTO);
 
-    // Mock saving order items
-    when(orderItemRepository.saveAll(any(List.class)))
-        .thenAnswer(
-            invocation -> {
-              List<OrderItem> items = invocation.getArgument(0);
-              return items; // Return the same list
-            });
+        // Act
+        OrderDTO result = orderService.placeOrder(user.getUserId(), paymentDTO);
 
-    // Mock the cart item deletion - this is called for each item in the cart
-    when(cartService.deleteCartItem(eq(user.getEmail()), eq(product.getProductId())))
-        .thenReturn("Item deleted");
+        // Assert
+        assertNotNull(result);
+        assertEquals(orderDTO.getOrderId(), result.getOrderId());
 
-    // Mock product quantity decrease
-    when(productService.decreaseProductQuantity(
-            eq(product.getProductId()), eq(cartItem.getQuantity())))
-        .thenReturn(true);
+        // Verify the flow
+        verify(userService).findUserById(user.getUserId());
+        verify(cartService).findCartByEmail(user.getEmail());
+        verify(productService).getProductById(product.getProductId());
+        verify(paymentService).processPayment(any(PaymentDTO.class));
+        verify(orderRepository).save(any(Order.class));
+        verify(orderItemRepository).saveAll(any(List.class));
+        verify(productService).decreaseProductQuantity(product.getProductId(), cartItem.getQuantity());
 
-    // Mock ModelMapper
-    when(modelMapper.map(any(Order.class), eq(OrderDTO.class))).thenReturn(orderDTO);
-    when(modelMapper.map(any(OrderItem.class), eq(OrderItemDTO.class)))
-        .thenReturn(new OrderItemDTO());
+    }
 
-    // Act
-    OrderDTO result = orderService.placeOrder(user.getUserId(), paymentDTO);
+    @Test
+    public void testPlaceOrder_UserNotFound_ThrowsException() {
+        // Arrange
+        when(userService.findUserById(user.getUserId())).thenReturn(Optional.empty());
 
-    // Assert
-    assertNotNull(result);
+        // Act & Assert
+        assertThrows(
+                ResourceNotFoundException.class,
+                () -> {
+                    orderService.placeOrder(user.getUserId(), paymentDTO);
+                });
 
-    // Verify the flow
-    verify(userService).findUserById(user.getUserId());
-    verify(cartService).findCartByEmail(user.getEmail());
-    verify(paymentService).processPayment(paymentDTO);
-    verify(orderRepository).save(any(Order.class));
-    verify(orderItemRepository).saveAll(any(List.class));
+        verify(userService).findUserById(user.getUserId());
+        verify(cartService, never()).findCartByEmail(any());
+    }
 
-    // Verify cart item was deleted
-    verify(cartService).deleteCartItem(user.getEmail(), product.getProductId());
+    @Test
+    public void testPlaceOrder_CartNotFound_ThrowsException() {
+        // Arrange
+        when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
+        when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.empty());
 
-    // Verify product quantity was decreased
-    verify(productService).decreaseProductQuantity(product.getProductId(), cartItem.getQuantity());
-  }
+        // Act & Assert
+        assertThrows(
+                ResourceNotFoundException.class,
+                () -> {
+                    orderService.placeOrder(user.getUserId(), paymentDTO);
+                });
 
-  @Test
-  public void testPlaceOrder_UserNotFound_ThrowsException() {
-    // Arrange
-    when(userService.findUserById(user.getUserId())).thenReturn(Optional.empty());
+        verify(userService).findUserById(user.getUserId());
+        verify(cartService).findCartByEmail(user.getEmail());
+        verify(orderRepository, never()).save(any());
+    }
 
-    // Act & Assert
-    assertThrows(
-        ResourceNotFoundException.class,
-        () -> {
-          orderService.placeOrder(user.getUserId(), paymentDTO);
-        });
+    @Test
+    public void testPlaceOrder_EmptyCart_ThrowsAPIException() {
+        // Arrange
+        Cart emptyCart = new Cart();
+        emptyCart.setCartId(1L);
+        emptyCart.setUser(user);
+        emptyCart.setCartItems(new ArrayList<>()); // Empty list
+        emptyCart.setTotalPrice(0.0);
 
-    verify(userService).findUserById(user.getUserId());
-    verify(cartService, never()).findCartByEmail(any());
-  }
+        when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
+        when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(emptyCart));
 
-  @Test
-  public void testPlaceOrder_CartNotFound_ThrowsException() {
-    // Arrange
-    when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
-    when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.empty());
+        // Act & Assert
+        assertThrows(
+                APIException.class,
+                () -> {
+                    orderService.placeOrder(user.getUserId(), paymentDTO);
+                });
 
-    // Act & Assert
-    assertThrows(
-        ResourceNotFoundException.class,
-        () -> {
-          orderService.placeOrder(user.getUserId(), paymentDTO);
-        });
+        // Verify that these methods should NOT be called when cart is empty
+        verify(paymentService, never()).processPayment(any());
+        verify(orderRepository, never()).save(any()); // CHANGE: Use never() instead of expecting it
+        verify(orderItemRepository, never()).saveAll(any());
+        verify(productService, never()).decreaseProductQuantity(anyLong(), anyInt());
+    }
 
-    verify(userService).findUserById(user.getUserId());
-    verify(cartService).findCartByEmail(user.getEmail());
-    verify(orderRepository, never()).save(any());
-  }
+    @Test
+    public void testPlaceOrder_MultipleItems() {
+        // Arrange - create second product
+        Product product2 = new Product();
+        product2.setProductId(2L);
+        product2.setProductName("Product 2");
+        product2.setQuantity(20);
+        product2.setPrice(50.0);
+        product2.setDiscount(5.0);
+        product2.setSpecialPrice(47.5);
 
-  @Test
-  public void testPlaceOrder_EmptyCart_ThrowsAPIException() {
-    // Arrange
-    Cart emptyCart = new Cart();
-    emptyCart.setCartId(1L);
-    emptyCart.setUser(user);
-    emptyCart.setCartItems(new ArrayList<>()); // Empty list
-    emptyCart.setTotalPrice(0.0);
+        // Create second cart item
+        CartItem cartItem2 = new CartItem();
+        cartItem2.setCartItemId(2L);
+        cartItem2.setProduct(product2);
+        cartItem2.setQuantity(3);
+        cartItem2.setProductPrice(47.5);
+        cartItem2.setDiscount(5.0);
+        cartItem2.setCart(cart); // Set the cart reference
 
-    when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
-    when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(emptyCart));
-    when(paymentService.processPayment(any(PaymentDTO.class))).thenReturn(payment);
-    when(orderRepository.save(any(Order.class))).thenReturn(order);
+        // Create new cart items list with BOTH items
+        List<CartItem> cartItems = new ArrayList<>();
+        cartItems.add(cartItem); // From @BeforeEach
+        cartItems.add(cartItem2); // New one
 
-    // Act & Assert
-    assertThrows(
-        APIException.class,
-        () -> {
-          orderService.placeOrder(user.getUserId(), paymentDTO);
-        });
+        // Create a NEW cart for this test (don't modify the shared one)
+        Cart testCart = new Cart();
+        testCart.setCartId(1L);
+        testCart.setUser(user);
+        testCart.setCartItems(cartItems);
+        testCart.setTotalPrice(322.5);
 
-    // Verify order was saved but items were not
-    verify(orderRepository).save(any(Order.class));
-    verify(orderItemRepository, never()).saveAll(any());
-  }
+        // Update order and orderDTO
+        order.setTotalAmount(322.5);
+        orderDTO.setTotalAmount(322.5);
 
-  @Test
-  public void testPlaceOrder_MultipleItems() {
-    // Arrange - cart with 2 items
-    Product product2 = new Product();
-    product2.setProductId(2L);
-    product2.setProductName("Product 2");
-    product2.setPrice(20.0);
-    product2.setQuantity(5);
-    product2.setSpecialPrice(20.0);
+        // Mock setup - use testCart instead of cart
+        when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
+        when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(testCart));
 
-    CartItem cartItem2 = new CartItem();
-    cartItem2.setCartItemId(2L);
-    cartItem2.setProduct(product2);
-    cartItem2.setQuantity(1);
-    cartItem2.setProductPrice(20.0);
+        // Mock getProductById for BOTH products
+        when(productService.getProductById(product.getProductId())).thenReturn(product);
+        when(productService.getProductById(product2.getProductId())).thenReturn(product2);
 
-    cart.getCartItems().add(cartItem2);
-    cart.setTotalPrice(40.0);
+        when(paymentService.processPayment(any(PaymentDTO.class))).thenReturn(payment);
+        when(orderRepository.save(any(Order.class))).thenReturn(order);
+        when(orderItemRepository.saveAll(any(List.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
 
-    when(userService.findUserById(user.getUserId())).thenReturn(Optional.of(user));
-    when(cartService.findCartByEmail(user.getEmail())).thenReturn(Optional.of(cart));
-    when(paymentService.processPayment(any(PaymentDTO.class))).thenReturn(payment);
-    when(orderRepository.save(any(Order.class))).thenReturn(order);
-    when(orderItemRepository.saveAll(any(List.class))).thenAnswer(inv -> inv.getArgument(0));
+        // Mock product quantity decrease for both products
+        when(productService.decreaseProductQuantity(product.getProductId(), cartItem.getQuantity()))
+                .thenReturn(true);
+        when(productService.decreaseProductQuantity(product2.getProductId(), cartItem2.getQuantity()))
+                .thenReturn(true);
 
-    // Mock deletions for both items
-    when(cartService.deleteCartItem(eq(user.getEmail()), eq(product.getProductId())))
-        .thenReturn("Item deleted");
-    when(cartService.deleteCartItem(eq(user.getEmail()), eq(product2.getProductId())))
-        .thenReturn("Item deleted");
+        // Mock ModelMapper
+        when(modelMapper.map(any(Order.class), eq(OrderDTO.class))).thenReturn(orderDTO);
 
-    when(productService.decreaseProductQuantity(anyLong(), anyInt())).thenReturn(true);
-    when(modelMapper.map(any(Order.class), eq(OrderDTO.class))).thenReturn(orderDTO);
-    when(modelMapper.map(any(OrderItem.class), eq(OrderItemDTO.class)))
-        .thenReturn(new OrderItemDTO());
+        // Act
+        OrderDTO result = orderService.placeOrder(user.getUserId(), paymentDTO);
 
-    // Act
-    OrderDTO result = orderService.placeOrder(user.getUserId(), paymentDTO);
+        // Assert
+        assertNotNull(result);
+        assertEquals(orderDTO.getOrderId(), result.getOrderId());
 
-    // Assert
-    assertNotNull(result);
-    verify(cartService, times(2)).deleteCartItem(eq(user.getEmail()), anyLong());
-    verify(productService, times(2)).decreaseProductQuantity(anyLong(), anyInt());
-  }
+        // Verify the flow
+        verify(userService).findUserById(user.getUserId());
+        verify(cartService).findCartByEmail(user.getEmail());
+        verify(productService).getProductById(product.getProductId());
+        verify(productService).getProductById(product2.getProductId());
+        verify(paymentService).processPayment(any(PaymentDTO.class));
+        verify(orderRepository).save(any(Order.class));
+        verify(orderItemRepository).saveAll(any(List.class));
+        verify(productService, times(2)).decreaseProductQuantity(anyLong(), anyInt());
+    }
 }
